[tool.poetry]
name = "project"
version = "0.0.0"
description = ""
authors = ["Mark Vartanyan <kolypto@gmail.com>"]
repository = 'https://github.com/kolypto/py-project'

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
nox = "^2020.8.22"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"

[tool.pytest.ini_options]
testpaths = [
    "tests/",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
