[tool.poetry]
name = "mongosql"
version = "2.0.15-1"
description = "A JSON query engine with SqlAlchemy as a back-end"
authors = ["Mark Vartanyan <kolypto@gmail.com>"]
repository = 'https://github.com/kolypto/py-mongosql'

[tool.poetry.dependencies]
python = "^3.6"
sqlalchemy = '^1.2, !=1.2.9, < 1.4'
nplus1loader = { version = '^1.0', optional = true }

[tool.poetry.dev-dependencies]
nox = "^2020.8.22"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
nplus1loader = '^1.0'
j2cli = '^0.3.10'
psycopg2-binary = '^2.8'
exdoc = '^0.1.3'
flask_jsontools = '^0.1.7'

[tool.pytest.ini_options]
testpaths = [
    "tests/",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
